Gerador_Codigo/MiniJavaParser.py
# Generated from MiniJava.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class MiniJavaParser ( Parser ):

    grammarFileName = "MiniJava.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'{'", "'public'", "'static'", 
                     "'void'", "'main'", "'('", "'String'", "'['", "']'", 
                     "')'", "'}'", "'extends'", "';'", "','", "'return'", 
                     "'int'", "'boolean'", "'if'", "'else'", "'while'", 
                     "'System.out.println'", "'='", "'&&'", "'<'", "'+'", 
                     "'-'", "'*'", "'.'", "'length'", "'this'", "'new'", 
                     "'!'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "Boolean", "Identifier", 
                      "Integer", "WS", "LineComment", "Comment" ]

    RULE_goal = 0
    RULE_mainClass = 1
    RULE_classDeclaration = 2
    RULE_varDeclaration = 3
    RULE_methodDeclaration = 4
    RULE_mtype = 5
    RULE_statement = 6
    RULE_expression = 7

    ruleNames =  [ "goal", "mainClass", "classDeclaration", "varDeclaration", 
                   "methodDeclaration", "mtype", "statement", "expression" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    Boolean=34
    Identifier=35
    Integer=36
    WS=37
    LineComment=38
    Comment=39

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class GoalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.main_class = None # MainClassContext
            self.main_class_decl = None # ClassDeclarationContext

        def EOF(self):
            return self.getToken(MiniJavaParser.EOF, 0)

        def mainClass(self):
            return self.getTypedRuleContext(MiniJavaParser.MainClassContext,0)


        def classDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.ClassDeclarationContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.ClassDeclarationContext,i)


        def getRuleIndex(self):
            return MiniJavaParser.RULE_goal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGoal" ):
                listener.enterGoal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGoal" ):
                listener.exitGoal(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGoal" ):
                return visitor.visitGoal(self)
            else:
                return visitor.visitChildren(self)




    def goal(self):

        localctx = MiniJavaParser.GoalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_goal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 16
            localctx.main_class = self.mainClass()
            self.state = 20
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MiniJavaParser.T__0:
                self.state = 17
                localctx.main_class_decl = self.classDeclaration()
                self.state = 22
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 23
            self.match(MiniJavaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainClassContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniJavaParser.RULE_mainClass

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class MainclassContext(MainClassContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.MainClassContext
            super().__init__(parser)
            self.main_class_stmt = None # StatementContext
            self.copyFrom(ctx)

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(MiniJavaParser.Identifier)
            else:
                return self.getToken(MiniJavaParser.Identifier, i)
        def statement(self):
            return self.getTypedRuleContext(MiniJavaParser.StatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainclass" ):
                listener.enterMainclass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainclass" ):
                listener.exitMainclass(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMainclass" ):
                return visitor.visitMainclass(self)
            else:
                return visitor.visitChildren(self)



    def mainClass(self):

        localctx = MiniJavaParser.MainClassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_mainClass)
        try:
            localctx = MiniJavaParser.MainclassContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 25
            self.match(MiniJavaParser.T__0)
            self.state = 26
            self.match(MiniJavaParser.Identifier)
            self.state = 27
            self.match(MiniJavaParser.T__1)
            self.state = 28
            self.match(MiniJavaParser.T__2)
            self.state = 29
            self.match(MiniJavaParser.T__3)
            self.state = 30
            self.match(MiniJavaParser.T__4)
            self.state = 31
            self.match(MiniJavaParser.T__5)
            self.state = 32
            self.match(MiniJavaParser.T__6)
            self.state = 33
            self.match(MiniJavaParser.T__7)
            self.state = 34
            self.match(MiniJavaParser.T__8)
            self.state = 35
            self.match(MiniJavaParser.T__9)
            self.state = 36
            self.match(MiniJavaParser.Identifier)
            self.state = 37
            self.match(MiniJavaParser.T__10)
            self.state = 38
            self.match(MiniJavaParser.T__1)
            self.state = 39
            localctx.main_class_stmt = self.statement()
            self.state = 40
            self.match(MiniJavaParser.T__11)
            self.state = 41
            self.match(MiniJavaParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniJavaParser.RULE_classDeclaration

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Dec_classContext(ClassDeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.ClassDeclarationContext
            super().__init__(parser)
            self.class_Decl_var = None # VarDeclarationContext
            self.class_meth_decl = None # MethodDeclarationContext
            self.copyFrom(ctx)

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(MiniJavaParser.Identifier)
            else:
                return self.getToken(MiniJavaParser.Identifier, i)
        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.VarDeclarationContext,i)

        def methodDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.MethodDeclarationContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.MethodDeclarationContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDec_class" ):
                listener.enterDec_class(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDec_class" ):
                listener.exitDec_class(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDec_class" ):
                return visitor.visitDec_class(self)
            else:
                return visitor.visitChildren(self)



    def classDeclaration(self):

        localctx = MiniJavaParser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classDeclaration)
        self._la = 0 # Token type
        try:
            localctx = MiniJavaParser.Dec_classContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self.match(MiniJavaParser.T__0)
            self.state = 44
            self.match(MiniJavaParser.Identifier)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==MiniJavaParser.T__12:
                self.state = 45
                self.match(MiniJavaParser.T__12)
                self.state = 46
                self.match(MiniJavaParser.Identifier)


            self.state = 49
            self.match(MiniJavaParser.T__1)
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniJavaParser.T__16) | (1 << MiniJavaParser.T__17) | (1 << MiniJavaParser.Identifier))) != 0):
                self.state = 50
                localctx.class_Decl_var = self.varDeclaration()
                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==MiniJavaParser.T__2:
                self.state = 56
                localctx.class_meth_decl = self.methodDeclaration()
                self.state = 61
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 62
            self.match(MiniJavaParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniJavaParser.RULE_varDeclaration

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Dec_varContext(VarDeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.VarDeclarationContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def mtype(self):
            return self.getTypedRuleContext(MiniJavaParser.MtypeContext,0)

        def Identifier(self):
            return self.getToken(MiniJavaParser.Identifier, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDec_var" ):
                listener.enterDec_var(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDec_var" ):
                listener.exitDec_var(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDec_var" ):
                return visitor.visitDec_var(self)
            else:
                return visitor.visitChildren(self)



    def varDeclaration(self):

        localctx = MiniJavaParser.VarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_varDeclaration)
        try:
            localctx = MiniJavaParser.Dec_varContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 64
            self.mtype()
            self.state = 65
            self.match(MiniJavaParser.Identifier)
            self.state = 66
            self.match(MiniJavaParser.T__13)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniJavaParser.RULE_methodDeclaration

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Dec_methodContext(MethodDeclarationContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.MethodDeclarationContext
            super().__init__(parser)
            self.meth_mtype = None # MtypeContext
            self.tipoP1 = None # MtypeContext
            self.nomeP1 = None # Token
            self._mtype = None # MtypeContext
            self.listaTipoPs = list() # of MtypeContexts
            self._Identifier = None # Token
            self.listaNomePs = list() # of Tokens
            self.met_var_decl = None # VarDeclarationContext
            self.meth_stmt_decl = None # StatementContext
            self.exp_retorno = None # ExpressionContext
            self.copyFrom(ctx)

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(MiniJavaParser.Identifier)
            else:
                return self.getToken(MiniJavaParser.Identifier, i)
        def mtype(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.MtypeContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.MtypeContext,i)

        def expression(self):
            return self.getTypedRuleContext(MiniJavaParser.ExpressionContext,0)

        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.VarDeclarationContext,i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.StatementContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.StatementContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDec_method" ):
                listener.enterDec_method(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDec_method" ):
                listener.exitDec_method(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDec_method" ):
                return visitor.visitDec_method(self)
            else:
                return visitor.visitChildren(self)



    def methodDeclaration(self):

        localctx = MiniJavaParser.MethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_methodDeclaration)
        self._la = 0 # Token type
        try:
            localctx = MiniJavaParser.Dec_methodContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(MiniJavaParser.T__2)
            self.state = 69
            localctx.meth_mtype = self.mtype()
            self.state = 70
            self.match(MiniJavaParser.Identifier)
            self.state = 71
            self.match(MiniJavaParser.T__6)
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniJavaParser.T__16) | (1 << MiniJavaParser.T__17) | (1 << MiniJavaParser.Identifier))) != 0):
                self.state = 72
                localctx.tipoP1 = self.mtype()
                self.state = 73
                localctx.nomeP1 = self.match(MiniJavaParser.Identifier)
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==MiniJavaParser.T__14:
                    self.state = 74
                    self.match(MiniJavaParser.T__14)
                    self.state = 75
                    localctx._mtype = self.mtype()
                    localctx.listaTipoPs.append(localctx._mtype)
                    self.state = 76
                    localctx._Identifier = self.match(MiniJavaParser.Identifier)
                    localctx.listaNomePs.append(localctx._Identifier)
                    self.state = 82
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 85
            self.match(MiniJavaParser.T__10)
            self.state = 86
            self.match(MiniJavaParser.T__1)
            self.state = 90
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 87
                    localctx.met_var_decl = self.varDeclaration() 
                self.state = 92
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniJavaParser.T__1) | (1 << MiniJavaParser.T__18) | (1 << MiniJavaParser.T__20) | (1 << MiniJavaParser.T__21) | (1 << MiniJavaParser.Identifier))) != 0):
                self.state = 93
                localctx.meth_stmt_decl = self.statement()
                self.state = 98
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 99
            self.match(MiniJavaParser.T__15)
            self.state = 100
            localctx.exp_retorno = self.expression(0)
            self.state = 101
            self.match(MiniJavaParser.T__13)
            self.state = 102
            self.match(MiniJavaParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MtypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.int_array = None # Token

        def Identifier(self):
            return self.getToken(MiniJavaParser.Identifier, 0)

        def getRuleIndex(self):
            return MiniJavaParser.RULE_mtype

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMtype" ):
                listener.enterMtype(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMtype" ):
                listener.exitMtype(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMtype" ):
                return visitor.visitMtype(self)
            else:
                return visitor.visitChildren(self)




    def mtype(self):

        localctx = MiniJavaParser.MtypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_mtype)
        try:
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                localctx.int_array = self.match(MiniJavaParser.T__16)
                self.state = 105
                self.match(MiniJavaParser.T__8)
                self.state = 106
                self.match(MiniJavaParser.T__9)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 107
                self.match(MiniJavaParser.T__17)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 108
                self.match(MiniJavaParser.T__16)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 109
                self.match(MiniJavaParser.Identifier)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return MiniJavaParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class State_printContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.StatementContext
            super().__init__(parser)
            self.expPrint = None # ExpressionContext
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(MiniJavaParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterState_print" ):
                listener.enterState_print(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitState_print" ):
                listener.exitState_print(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitState_print" ):
                return visitor.visitState_print(self)
            else:
                return visitor.visitChildren(self)


    class State_assignContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.StatementContext
            super().__init__(parser)
            self.expIdt = None # ExpressionContext
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(MiniJavaParser.Identifier, 0)
        def expression(self):
            return self.getTypedRuleContext(MiniJavaParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterState_assign" ):
                listener.enterState_assign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitState_assign" ):
                listener.exitState_assign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitState_assign" ):
                return visitor.visitState_assign(self)
            else:
                return visitor.visitChildren(self)


    class State_ifContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.StatementContext
            super().__init__(parser)
            self.expIf = None # ExpressionContext
            self.statementIF1 = None # StatementContext
            self.statementIF2 = None # StatementContext
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(MiniJavaParser.ExpressionContext,0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.StatementContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.StatementContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterState_if" ):
                listener.enterState_if(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitState_if" ):
                listener.exitState_if(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitState_if" ):
                return visitor.visitState_if(self)
            else:
                return visitor.visitChildren(self)


    class State_array_assignContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.StatementContext
            super().__init__(parser)
            self.expArrayAssign1 = None # ExpressionContext
            self.expArrayAssign2 = None # ExpressionContext
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(MiniJavaParser.Identifier, 0)
        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterState_array_assign" ):
                listener.enterState_array_assign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitState_array_assign" ):
                listener.exitState_array_assign(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitState_array_assign" ):
                return visitor.visitState_array_assign(self)
            else:
                return visitor.visitChildren(self)


    class State_whileContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.StatementContext
            super().__init__(parser)
            self.expWhile = None # ExpressionContext
            self.statementWhile = None # StatementContext
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(MiniJavaParser.ExpressionContext,0)

        def statement(self):
            return self.getTypedRuleContext(MiniJavaParser.StatementContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterState_while" ):
                listener.enterState_while(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitState_while" ):
                listener.exitState_while(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitState_while" ):
                return visitor.visitState_while(self)
            else:
                return visitor.visitChildren(self)


    class State_lrparentsContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a MiniJavaParser.StatementContext
            super().__init__(parser)
            self.stmt = None # StatementContext
            self.copyFrom(ctx)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MiniJavaParser.StatementContext)
            else:
                return self.getTypedRuleContext(MiniJavaParser.StatementContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterState_lrparents" ):
                listener.enterState_lrparents(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitState_lrparents" ):
                listener.exitState_lrparents(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitState_lrparents" ):
                return visitor.visitState_lrparents(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = MiniJavaParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 153
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                localctx = MiniJavaParser.State_lrparentsContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 112
                self.match(MiniJavaParser.T__1)
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << MiniJavaParser.T__1) | (1 << MiniJavaParser.T__18) | (1 << MiniJavaParser.T__20) | (1 << MiniJavaParser.T__21) | (1 << MiniJavaParser.Identifier))) != 0):
                    self.state = 113
                    localctx.stmt = self.statement()
                    self.state = 118
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 119
                self.match(MiniJavaParser.T__11)
                pass

            elif la_ == 2:
                localctx = MiniJavaParser.State_ifContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 120
                self.match(MiniJavaParser.T__18)
                self.state = 121
                self.match(MiniJavaParser.T__6)
                self.state = 122
                localctx.expIf = self.expression(0)
                self.state = 123
                self.match(MiniJavaParser.T__10)
                self.state = 124
                localctx.statementIF1 = self.statement()
                self.state = 125
                self.match(MiniJavaParser.T__19)
                self.state = 126
                localctx.statementIF2 = self.statement()
                pass

            elif la_ == 3:
                localctx = MiniJavaParser.State_whileContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 128
                self.match(MiniJavaParser.T__20)
                self.state = 129
                self.match(MiniJavaParser.T__6)
                self.state = 130
                localctx.expWhile = self.expression(0)
                self.state = 131
                self.match(MiniJavaParser.T__10)
                self.state = 132
                localctx.statementWhile = self.statement()
                pass

            elif la_ == 4:
                localctx = MiniJavaParser.State_printContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 134
                self.match(MiniJavaParser.T__21)
                self.state = 135
                self.match(MiniJavaParser.T__6)
                self.state = 136
                localctx.expPrint = self.expression(0)
                self.state = 137
                self.match(MiniJavaParser.T__10)
                self.state = 138
                self.match(MiniJavaParser.T__13)
                pass
